--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1"
