--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.46.1",
     "body-parser": "^1.20.3",
+    "canvas": "^2.11.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "jimp": "^0.2.27",
+    "nodemailer": "^6.9.16",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4"
   }
 }
